; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/mv88e6xxx/extr_chip.c__mv88e6xxx_get_ethtool_stat.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/mv88e6xxx/extr_chip.c__mv88e6xxx_get_ethtool_stat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mv88e6xxx_chip = type { i32 }
%struct.mv88e6xxx_hw_stat = type { i32, i32, i32 }

@U64_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mv88e6xxx_chip*, %struct.mv88e6xxx_hw_stat*, i32, i32, i32)* @_mv88e6xxx_get_ethtool_stat to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_mv88e6xxx_get_ethtool_stat(%struct.mv88e6xxx_chip* %0, %struct.mv88e6xxx_hw_stat* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.mv88e6xxx_chip*, align 8
  %8 = alloca %struct.mv88e6xxx_hw_stat*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store %struct.mv88e6xxx_chip* %0, %struct.mv88e6xxx_chip** %7, align 8
  store %struct.mv88e6xxx_hw_stat* %1, %struct.mv88e6xxx_hw_stat** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 0, i32* %13, align 4
  store i32 0, i32* %14, align 4
  %17 = load %struct.mv88e6xxx_hw_stat*, %struct.mv88e6xxx_hw_stat** %8, align 8
  %18 = getelementptr inbounds %struct.mv88e6xxx_hw_stat, %struct.mv88e6xxx_hw_stat* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  switch i32 %19, label %78 [
    i32 128, label %20
    i32 129, label %55
    i32 130, label %57
  ]

20:                                               ; preds = %5
  %21 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %7, align 8
  %22 = load i32, i32* %9, align 4
  %23 = load %struct.mv88e6xxx_hw_stat*, %struct.mv88e6xxx_hw_stat** %8, align 8
  %24 = getelementptr inbounds %struct.mv88e6xxx_hw_stat, %struct.mv88e6xxx_hw_stat* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @mv88e6xxx_port_read(%struct.mv88e6xxx_chip* %21, i32 %22, i32 %25, i32* %14)
  store i32 %26, i32* %15, align 4
  %27 = load i32, i32* %15, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %20
  %30 = load i32, i32* @U64_MAX, align 4
  store i32 %30, i32* %6, align 4
  br label %86

31:                                               ; preds = %20
  %32 = load i32, i32* %14, align 4
  store i32 %32, i32* %12, align 4
  %33 = load %struct.mv88e6xxx_hw_stat*, %struct.mv88e6xxx_hw_stat** %8, align 8
  %34 = getelementptr inbounds %struct.mv88e6xxx_hw_stat, %struct.mv88e6xxx_hw_stat* %33, i32 0, i32 2
  %35 = load i32, i32* %34, align 4
  %36 = icmp eq i32 %35, 4
  br i1 %36, label %37, label %54

37:                                               ; preds = %31
  %38 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %7, align 8
  %39 = load i32, i32* %9, align 4
  %40 = load %struct.mv88e6xxx_hw_stat*, %struct.mv88e6xxx_hw_stat** %8, align 8
  %41 = getelementptr inbounds %struct.mv88e6xxx_hw_stat, %struct.mv88e6xxx_hw_stat* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = add nsw i32 %42, 1
  %44 = call i32 @mv88e6xxx_port_read(%struct.mv88e6xxx_chip* %38, i32 %39, i32 %43, i32* %14)
  store i32 %44, i32* %15, align 4
  %45 = load i32, i32* %15, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %49

47:                                               ; preds = %37
  %48 = load i32, i32* @U64_MAX, align 4
  store i32 %48, i32* %6, align 4
  br label %86

49:                                               ; preds = %37
  %50 = load i32, i32* %14, align 4
  %51 = shl i32 %50, 16
  %52 = load i32, i32* %12, align 4
  %53 = or i32 %52, %51
  store i32 %53, i32* %12, align 4
  br label %54

54:                                               ; preds = %49, %31
  br label %80

55:                                               ; preds = %5
  %56 = load i32, i32* %10, align 4
  store i32 %56, i32* %14, align 4
  br label %57

57:                                               ; preds = %5, %55
  %58 = load %struct.mv88e6xxx_hw_stat*, %struct.mv88e6xxx_hw_stat** %8, align 8
  %59 = getelementptr inbounds %struct.mv88e6xxx_hw_stat, %struct.mv88e6xxx_hw_stat* %58, i32 0, i32 1
  %60 = load i32, i32* %59, align 4
  %61 = load i32, i32* %11, align 4
  %62 = or i32 %60, %61
  %63 = load i32, i32* %14, align 4
  %64 = or i32 %63, %62
  store i32 %64, i32* %14, align 4
  %65 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %7, align 8
  %66 = load i32, i32* %14, align 4
  %67 = call i32 @mv88e6xxx_g1_stats_read(%struct.mv88e6xxx_chip* %65, i32 %66, i32* %12)
  %68 = load %struct.mv88e6xxx_hw_stat*, %struct.mv88e6xxx_hw_stat** %8, align 8
  %69 = getelementptr inbounds %struct.mv88e6xxx_hw_stat, %struct.mv88e6xxx_hw_stat* %68, i32 0, i32 2
  %70 = load i32, i32* %69, align 4
  %71 = icmp eq i32 %70, 8
  br i1 %71, label %72, label %77

72:                                               ; preds = %57
  %73 = load %struct.mv88e6xxx_chip*, %struct.mv88e6xxx_chip** %7, align 8
  %74 = load i32, i32* %14, align 4
  %75 = add nsw i32 %74, 1
  %76 = call i32 @mv88e6xxx_g1_stats_read(%struct.mv88e6xxx_chip* %73, i32 %75, i32* %13)
  br label %77

77:                                               ; preds = %72, %57
  br label %80

78:                                               ; preds = %5
  %79 = load i32, i32* @U64_MAX, align 4
  store i32 %79, i32* %6, align 4
  br label %86

80:                                               ; preds = %77, %54
  %81 = load i32, i32* %13, align 4
  %82 = shl i32 %81, 32
  %83 = load i32, i32* %12, align 4
  %84 = or i32 %82, %83
  store i32 %84, i32* %16, align 4
  %85 = load i32, i32* %16, align 4
  store i32 %85, i32* %6, align 4
  br label %86

86:                                               ; preds = %80, %78, %47, %29
  %87 = load i32, i32* %6, align 4
  ret i32 %87
}

declare dso_local i32 @mv88e6xxx_port_read(%struct.mv88e6xxx_chip*, i32, i32, i32*) #1

declare dso_local i32 @mv88e6xxx_g1_stats_read(%struct.mv88e6xxx_chip*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
